--- a/src/app/features/gis/components/quotation/components/cover-types-comparison/cover-types-comparison.component.html
+++ b/src/app/features/gis/components/quotation/components/cover-types-comparison/cover-types-comparison.component.html
@@ -84,66 +84,56 @@
                     </div>
                     <div class="collapse" id="clauseDetails" [class.show]="isClauseDetailsOpen">
 
-
-
-                      <p-table [value]="clauseList" dataKey="code" selectionMode="single"
-                        [tableStyle]="{'min-width': '50rem'}" [(selection)]="selectedClause" responsiveLayout="scroll"
-                        [autoLayout]="true" [paginator]="true" [rows]="5" [showCurrentPageReport]="true"
-                        currentPageReportTemplate=" {first} - {last} of {totalRecords}" [autoLayout]="true"
-                        class='ui-datatable' >
+                      <p-table
+                        [value]="clauseList"
+                        dataKey="code"
+                        selectionMode="single"
+                        [tableStyle]="{'min-width': '50rem'}"
+                        [(selection)]="selectedClause"
+                        responsiveLayout="scroll"
+                        [autoLayout]="true"
+                        [paginator]="clauseList?.length > 5"
+                        [rows]="5"
+                        [showCurrentPageReport]="clauseList?.length > 5"
+                        currentPageReportTemplate="{first} - {last} of {totalRecords}"
+                        class="ui-datatable">
 
                         <ng-template pTemplate="header">
-                          <tr>
-                            <!-- <th style="width: 5%;padding-right: 50px;">{{'gis.quotation.select' | translate}}</th> -->
-                            <th class="flexible-header"> {{'gis.quotation.heading' | translate}}</th>
-                            <th class="flexible-header"> {{'gis.quotation.description' | translate}}</th>
-                            <th class="flexible-header"></th>
-                            <th class="flexible-header"> {{'gis.quotation.mandatory' | translate}}</th>
-
-
-
-                          </tr>
+                            <tr>
+                                <th class="flexible-header"> {{'gis.quotation.heading' | translate}}</th>
+                                <th class="flexible-header"> {{'gis.quotation.description' | translate}}</th>
+                                <th class="flexible-header"></th>
+                                <th class="flexible-header"> {{'gis.quotation.mandatory' | translate}}</th>
+                            </tr>
                         </ng-template>
+
                         <ng-template pTemplate="body" let-clauseList let-ri="rowIndex">
-                          <tr [pSelectableRow]="clauseList" [class.p-highlight]="clauseList === selectedClause"
-                            class="custom-row">
+                            <tr [pSelectableRow]="clauseList" [class.p-highlight]="clauseList === selectedClause" class="custom-row">
+                                <td class="flexible-header" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 250px;"
+                                    pTooltip="{{clauseList.heading }}" tooltipPosition="top">
+                                    {{ clauseList.heading | sentenceCase }}
+                                </td>
+                                <td class="flexible-header" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width:300px;">
+                                    {{ clauseList.wording | sentenceCase }}
+                                </td>
+                                <td class="flexible-header">
+                                    <button pButton pRipple type="button" (click)="openHelperModal(clauseList)"
+                                        icon="pi pi-info-circle" class="p-button-rounded p-button-text"></button>
+                                </td>
+                                <td class="flexible-header">{{ clauseList.isMandatory }}</td>
+                            </tr>
 
-
-                            <td class="flexible-header" style=" white-space: nowrap;
-                              overflow: hidden;
-                              text-overflow: ellipsis;
-                              overflow-y: auto;
-                              max-width: 250px;" pTooltip="{{clauseList.heading }}" tooltipPosition="top">
-                              {{clauseList.heading |sentenceCase}}
-                            </td>
-                            <td class="flexible-header"
-                              style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width:300px; overflow-y: auto;">
-                              {{clauseList.wording |sentenceCase}}
-                            </td>
-                            <td class="flexible-header">
-                              <button pButton pRipple type="button" (click)="openHelperModal(clauseList)"
-                                icon="pi pi-info-circle" class="p-button-rounded p-button-text"></button>
-                            </td>
-                            <td class="flexible-header">{{clauseList.isMandatory}}</td>
-
-
-
-
-
-
-                          </tr>
-                          <!-- Modal for each row -->
-                          <p-dialog [(visible)]="clauseList.showHelperModal" [modal]="false"
-                            [style]="{ 'width': '700px'}">
-                            <ng-container *ngIf="clauseList">
-                              <div pResizable [ngStyle]="{'min-width.px': 200, 'min-height.px': 150}"
-                                (onResize)="onResize($event)">
-                                <p>{{ clauseList.wording }}</p>
-                              </div>
-                            </ng-container>
-                          </p-dialog>
+                            <!-- Modal for each row -->
+                            <p-dialog [(visible)]="clauseList.showHelperModal" [modal]="false" [style]="{ 'width': '700px'}">
+                                <ng-container *ngIf="clauseList">
+                                    <div pResizable [ngStyle]="{'min-width.px': 200, 'min-height.px': 150}" (onResize)="onResize($event)">
+                                        <p>{{ clauseList.wording }}</p>
+                                    </div>
+                                </ng-container>
+                            </p-dialog>
                         </ng-template>
-                      </p-table>
+                    </p-table>
+
                     </div>
                   </div>
                 </div>
@@ -174,9 +164,17 @@
                       </div>
                     </div>
                     <div class="collapse" id="limitsOfLiabilityDetails" [class.show]="isLimitsDetailsOpen">
-                      <p-table #dt1 [value]="limitsOfLiabilityList" dataKey="code" selectionMode="single"
-                        [tableStyle]="{ 'min-width': '50rem' }" responsiveLayout="scroll" [paginator]="true" [rows]="5"
-                        [showCurrentPageReport]="true" currentPageReportTemplate=" {first} - {last} of {totalRecords}"
+                      <p-table
+                        #dt1
+                        [value]="limitsOfLiabilityList"
+                        dataKey="code"
+                        selectionMode="single"
+                        [tableStyle]="{ 'min-width': '50rem' }"
+                        responsiveLayout="scroll"
+                        [paginator]="limitsOfLiabilityList?.length > 5"
+                        [rows]="5"
+                        [showCurrentPageReport]="limitsOfLiabilityList?.length > 5"
+                        currentPageReportTemplate=" {first} - {last} of {totalRecords}"
                         [autoLayout]="true" class='ui-datatable' >
                         <ng-template pTemplate="header">
                           <tr>
@@ -237,8 +235,8 @@
                     <div class="collapse" id="excessDetails" [class.show]="isExcessDetailsOpen">
 
                       <p-table #dt1 [value]="excessesList" dataKey="code" selectionMode="single"
-                        [tableStyle]="{ 'min-width': '50rem' }" responsiveLayout="scroll" [paginator]="true" [rows]="5"
-                        [showCurrentPageReport]="true" currentPageReportTemplate=" {first} - {last} of {totalRecords}"
+                        [tableStyle]="{ 'min-width': '50rem' }" responsiveLayout="scroll" [paginator]="excessesList?.length > 5" [rows]="5"
+                        [showCurrentPageReport]="excessesList?.length > 5" currentPageReportTemplate=" {first} - {last} of {totalRecords}"
                         [autoLayout]="true" class='ui-datatable' >
                         <ng-template pTemplate="header">
                           <tr>
