--- a/src/app/features/gis/components/quotation/components/quotation-conversion/quotation-conversion.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-conversion/quotation-conversion.component.html
@@ -56,7 +56,7 @@
 
         <!-- Second Row -->
         <div class="row g-3 align-items-center mb-4">
-          
+
 
           <div class="col-sm-3 col-12">
             <!-- Quotation Number Input -->
@@ -191,13 +191,18 @@
           <div class="d-flex justify-content-between align-items-center mb-3">
             <p class="title mb-3">{{'gis.quotation.quotation_products' | translate}}</p>
             <div>
-              <button class="btn btn-outline-primary me-2">{{'gis.quotation.merge_to_policy' | translate}}</button>
+              <button
+                class="btn btn-outline-primary me-2"
+                (click)="openPolicyModal()"
+              >
+                {{'gis.quotation.merge_to_policy' | translate}}
+              </button>
               <button class="btn btn-primary" (click)="convertToPolicy()">{{'gis.quotation.convert_to_policy' |
                 translate}}</button>
             </div>
           </div>
 
-          <p-table [value]="quotationProducts" [paginator]="true" [rows]="10" [scrollable]="true"
+          <p-table [value]="quotationProducts" [scrollable]="true"
             scrollDirection="horizontal" [showCurrentPageReport]="true"
             currentPageReportTemplate=" {first} - {last} of {totalRecords}" [responsiveLayout]="'scroll'"
             [resizableColumns]="true" [reorderableColumns]="true" [tableStyle]="{ 'min-width': '50px' }">
@@ -242,6 +247,7 @@
                 </td>
               </tr>
             </ng-template>
+            <br/><br/><br/><br/>
           </p-table>
 
         </div>
@@ -249,4 +255,73 @@
       </div>
     </div>
   </div>
+
+  <!-- Policy selection modal -->
+  <div
+    class="modal fade" id="policySearchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
+    [class.show]="showModal" [class.modal-open]="showModal">
+    <div class="modal-dialog modal-dialog-centered modal-md  modal-fade" >
+      <div class="modal-content">
+
+        <div class="modal-body">
+          <button type="button" #closebutton class="float-end btn-close"
+            data-bs-dismiss="modal" aria-label="Close" (click)="closeModal()"></button>
+          <p class="text-start title" id="selectClient"> {{'gis.quotation.select_a_policy' | translate}}</p>
+
+          <p-table
+            #dt1
+            [autoLayout]="true"
+            [lazy]="true"
+            [paginator]="true"
+            [rowHover]="true"
+            [resizableColumns]="true"
+            [showCurrentPageReport]="true"
+            [rows]="pageSize || 5"
+            [value]="policyData"
+            [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
+            responsiveLayout="stack"
+            [scrollable]="true"
+            scrollHeight="400px"
+            currentPageReportTemplate="{first} - {last} of {totalRecords}"
+            [globalFilterFields]=globalFilterFields
+            styleClass="p-datatable-sm">
+
+            <ng-template pTemplate="header">
+              <tr>
+                <th pSortableColumn="id" class="flexible-header">{{'gis.quotation.policy_ID' | translate}}</th>
+              </tr>
+              <tr>
+                <th><input type="text" class="form-control" (input)="inputPolicyNumber($event)"></th>
+              </tr>
+            </ng-template>
+
+            <ng-template pTemplate="body" let-policyData>
+              <tr [pSelectableRow]="true" (click)="loadPolicyDetails(policyData)">
+                <td>{{ policyData.policyNumber }}</td>
+              </tr>
+            </ng-template>
+
+            <ng-template pTemplate="emptymessage">
+              <tr>
+                <td colspan="4">{{'gis.quotation.no_policy_found' | translate}}</td>
+              </tr>
+            </ng-template>
+          </p-table>
+          <br>
+
+          <div class="justify-content-end">
+            <button class="btn btn-outline-primary me-2" (click)="mergeQuoteToPolicy()" >{{'gis.quotation.merge_to_policy' | translate}}</button>
+            <button
+              class="btn btn-primary"
+              data-bs-dismiss="modal"
+              (click)="closeModal()"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
