--- a/src/app/features/fms/components/base-fms/base-fms.component.css
+++ b/src/app/features/fms/components/base-fms/base-fms.component.css
@@ -1,62 +1,61 @@
+.card-body {
+  border: 1px solid #d9d9d9;
+  border-radius: 8px;
+}
 
 /* .fixed-height-card {
     height: 350px;
     overflow: hidden;
   } */
-  .top-bar {
-    
-    background-color: white;
-    border: 1px solid #e5e7eb;
-    padding: 8px;
-    margin-bottom: 5px;
-    display: flex;
-    align-items: center;
-    white-space: nowrap;
-    overflow-x: auto;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    height: 35px; /* Set a fixed height */
+.top-bar {
+  background-color: white;
+  border: 1px solid #e5e7eb;
+  padding: 8px;
+  margin-bottom: 5px;
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  overflow-x: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  height: 35px; /* Set a fixed height */
 }
 /* Override for dropdowns inside the .top-bar */
 .top-bar .dropdown-icon {
-    right: 2px !important; /* Increase the right spacing only for top-bar */
+  right: 2px !important; /* Increase the right spacing only for top-bar */
 }
 .top-select {
-    display: flex;
-    align-items: center;
-    margin-right: 60px;
-    
-    font-size: 13px;
-    color: #333;
-    /* FMS Info bar */
+  display: flex;
+  align-items: center;
+  margin-right: 60px;
 
-
-
+  font-size: 13px;
+  color: #333;
+  /* FMS Info bar */
 }
-.org{
-    margin-left: 20px;
+.org {
+  margin-left: 20px;
 }
 
 .top-select span {
-    margin-right: 4px;
+  margin-right: 4px;
 }
 
 .top-select select {
-    border: none;
-    background: transparent;
-    font-size: 13px;
-    color: #333;
-    padding-right: 16px;
-   
-    background-repeat: no-repeat;
-    background-position: right center;
-    appearance: none;
-}
+  border: none;
+  background: transparent;
+  font-size: 13px;
+  color: #333;
+  padding-right: 16px;
 
+  background-repeat: no-repeat;
+  background-position: right center;
+  appearance: none;
+}
 
 /* Add this new class to hide the scrollbar but keep functionality */
 .top-bar::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 .dropdown-container {
   position: relative;
@@ -65,8 +64,6 @@
 }
 
 select.form-control {
-  
- 
   width: 100%;
   padding-right: 30px; /* Ensure space for icon */
   appearance: none; /* Removes default dropdown arrow */
@@ -80,52 +77,57 @@ select.form-control {
   font-size: 10px;
 
   pointer-events: none; /* Prevent interaction */
-  color: #555; 
+  color: #555;
 }
 
-  .fixed-height-card {
-    height: 350px;
-    overflow-y: auto; /* Add vertical scrolling */
+.fixed-height-card {
+  height: 350px;
+  overflow-y: auto; /* Add vertical scrolling */
 }
-  .card-header {
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 24px;
-    color: #00529B;
-    border-bottom: none;
-  }
-  
-  .list {
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 24px;
-    color: #000000;
-  }
-  
-  .slist {
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    color: #000000;
-  }
-  
-  .custom-list {
-    list-style-type: none;
-  }
-  
-  .custom-list div {
-    cursor: pointer;
-    margin: 5px 0;
-    padding-left: 20px;
-    position: relative;
-  }
-  
-  a {
-    text-decoration: none;
-    color: inherit;
-    cursor: pointer;
-  }
-  
+.card-header {
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  color: #00529b;
+  border-bottom: none;
+}
+
+.list {
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 24px;
+  color: #000000;
+}
+
+.slist {
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  color: #000000;
+}
+
+.slist li {
+  white-space: nowrap; /* Prevent text from wrapping */
+  max-width: 100%; /* Ensure it fits within the container */
+  display: block; /* Ensure proper alignment */
+}
+
+.custom-list {
+  list-style-type: none;
+}
+
+.custom-list div {
+  cursor: pointer;
+  margin: 5px 0;
+  padding-left: 20px;
+  position: relative;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
+}
